--- a/MetodoSimplex/MetodoSimplex.csproj
+++ b/MetodoSimplex/MetodoSimplex.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\FuncionObjetivo.cs" />
-    <Compile Include="Models\MatrizIdentidad.cs" />
+    <Compile Include="Models\Matriz.cs" />
     <Compile Include="Models\Restriccion.cs" />
     <Compile Include="Models\Utils.cs" />
     <Compile Include="Program.cs" />
